# contriboo-lib

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yaml  markdownlint.yaml  mypy.yaml  pytest.yaml  ruff.yaml  security.yaml
examples/: count_followers.py  get_total_commits_count_example.py  percent_of_dev_changes.py  total_prs_example.py
src/contriboo/: __init__.py  client.py  exceptions.py  repository_name.py  settings.py
src/contriboo/integrations/: __init__.py
src/contriboo/integrations/git/: __init__.py  gateway.py
src/contriboo/integrations/github/: __init__.py  dto.py  requests_provider.py
src/contriboo/profile/: __init__.py  interfaces.py  models.py  service.py  types.py
tests/: conftest.py  test_client_api.py  test_git_gateway.py  test_profile_service.py  test_repository_name.py  test_requests_provider.py  test_settings.py
