[project]
name = "contriboo"
version = "0.0.1"
description = "Library for assessment of the contribution of developers on GitHub"
readme = "README.md"
authors = [
  { name = "alchemmist", email = "anton.ingrish@gmail.com" },
  { name = "Alex Smirnov", email = "alekssmir411@gmail.com" },
  { name = "vitawild", email = "wildvita@yandex.ru" },
]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11.7",
  "requests>=2.32.5",
  "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contriboo"]
include = ["src/contriboo/py.typed"]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
